<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/tvSelectCountry"
        style="@style/TextStyleBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:text="@string/text_select_country"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/colorAccent"
        android:background="?attr/selectableItemBackground"
        android:text="@string/action_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/tvSelectCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSelectCountry" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvCountries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btnDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectCountry">

        <RadioGroup
            android:id="@+id/rdgCountries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RadioGroup>

    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btnDone"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_bluegreen_circular_ripple"
        android:text="@string/action_done"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>